# deck-builder

./: .gitignore  MANIFEST.in  README.md  deck_builder-0.1.0-py3-none-any.whl  deck_builder-0.2.0-py3-none-any.whl  pyproject.toml
benchmarks/cases/: 01_linear_commercial.yaml  02_branching_approval.yaml  03_etl_pipeline.yaml  04_ml_monitoring_loop.yaml  05_sem_explanatory.yaml  06_causal_dag.yaml  07_nested_modules.yaml  08_dense_subprocess.yaml  09_adversarial_ambiguous.yaml  10_label_density_stress.yaml
notes/: pptx_interop.md
scripts/: build_deck.py
sem_engine/: __init__.py  discriminator.py  experiment.py  generator.py  parser.py  quality_checks.py  schema.py  scorer.py
sem_engine/renderers/: __init__.py  base.py  dark_theme.py  graphviz_renderer.py  mermaid.py  plantuml.py  pptx_native.py  premium_renderer.py  svg_native.py
slide_engine/: __init__.py  critic.py  figures.py  flow_integration.py  icons.py  llm_generator.py  pptx_builder.py  schema.py  styles.py
